Added New Bing Webmaster META Tag

--- a/views/partials/meta.ejs
+++ b/views/partials/meta.ejs
@@ -50,7 +50,7 @@
 <meta name="google-site-verification" content="io9BTDf04M3fT1HRH317jbXLicBXZjXtMBE0nb3zl4o" />
 
 <!-- Bing and Yahoo Webmaster Tools Site Verification -->
-<meta content='6FC60D74B6B0FBE7265A16F5322EC1AB' name='msvalidate.01' /> />
+<meta name="msvalidate.01" content="9C63FC0190D285B64EC70FB7CB5615C4" />
 
 <!-- Google Authorship and Publisher Markup --> 
 <link rel="author" href="https://plus.google.com/+Roadmunkgoogleplus/posts"/>
