Fixed spelling error pt2

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,7 +46,7 @@
 								<ul>
 									<li>Completely customized website design - special emphasis on responsive development</li>
 									<li>Custom email templates, logos, &#38; icons</li>
-									<li>Graphic designs for advertisments, &#38; interactive PDF's, and website</li>
+									<li>Graphic designs for advertisements, &#38; interactive PDF's, and website</li>
 								</ul>
 							</header>
 						</div>
