Fixed Spelling Error

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
 						<div id="feature_1_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Design</h1>
-								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put, Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably Brent's work includes:</p>
+								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put, Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably, Brent's work includes:</p>
 								<ul>
 									<li>Completely customized website design - special emphasis on responsive development</li>
 									<li>Custom email templates, logos, &#38; icons</li>
