--- a/views/designs.ejs
+++ b/views/designs.ejs
@@ -113,6 +113,59 @@
 			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
+			<div class="container medium-margin-bottom">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">CSS Animations</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-12 text-default">
+						<div class="row">
+							<ul class="list-unstyled image-list">
+								<li class="col-md-4 small-margin-top">
+									<!--<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">-->
+									<span class="init-clock">
+										<img src="/images/animations/icon-clock-cogs-no-hands2.png" width="200" height="200">
+										<img class="clock-hand" src="/images/animations/icon-clock-hand.png" height="3.5px">
+										<img class="hour-clock-hand" src="/images/animations/icon-hour-clock-hand.png" width="6px">
+									</span>
+									<div class="row">
+										<div class="col-md-10 center">
+											<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
+										</div>
+									</div>
+								</li>
+								<li class="col-md-4 small-margin-top">
+									<img class="home-svg" src="/images/pencils.svg" alt="Tools to design roadmap in minutes" width="165" height="165">
+									<div class="row">
+										<div class="col-md-10 center">
+											<h3 class="text-center font-normal text-get-smaller">Color And style to match your brand</h3>
+										</div>
+									</div>
+								</li>
+								<li class="col-md-4 small-margin-top">
+									<!--<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">-->
+									<span class="init-dl">
+										<img src="/images/icon-imac-roadmap.png" width="200" height="200">
+										<span class="glyphicon glyphicon-arrow-down download"></span>
+									</span>
+									<div class="row">
+										<div class="col-md-12 center">
+											<h3 class="text-center font-normal text-get-smaller">Download your presentation-ready roadmap</h3>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section section-normal has-top">
+			<div class="decor-top">
+				<% include ./partials/top-round-angle %>
+			</div>
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
 			<div class="container">
 				<header class="section-header small text-center underline">
 					<h1 class="headline text-large hairline xsmall-margin-bottom">More Coming Soon...</h1>
