--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,11 +42,11 @@
 						<div id="feature_1_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Design</h1>
-								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put, Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably, Brent's work includes:</p>
+								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it all. Simply put, Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably, Brent's work includes:</p>
 								<ul>
 									<li>Completely customized website design - special emphasis on responsive development</li>
 									<li>Custom email templates, logos, &#38; icons</li>
-									<li>Graphic designs for advertisements, &#38; interactive PDF's, and website</li>
+									<li>Graphic designs for advertisements, &#38; interactive PDF's, and websites</li>
 								</ul>
 							</header>
 						</div>
@@ -60,7 +60,7 @@
 						<div id="feature_2_text" class="col-md-7 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Development</h1>
-								<p class="body-subheader features">Current studying for a degree in Honours Computer Science Brent is immersed in a development environment day in an day out. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
+								<p class="body-subheader features">Currently studying for a degree in Honours Computer Science, Brent is immersed in a development environment day in and day out. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
 								<ul>
 									<li>
 										<a href="http://easybadge.herokuapp.com/">
