--- a/views/blog/the-stuck-man.ejs
+++ b/views/blog/the-stuck-man.ejs
@@ -3,7 +3,7 @@
 
 <p>One man. On one really thin tree-like rock formation. Surrounded by a gaping circular hole. Surrounded by desert all around. If someone had taken a panoramic zoom out shot of the man’s location they would have seen just that. The scene sort of looked like a pizza with a hole cut in the center. Except the other way around. All the pizza was gone and only the hole was left.</p>
 
-<p>Well, as you can expect, the man was surprised. He had a legitimate reason to be. He hadn’t murdered a mafia member. Or ripped off any drug dealers. He genuinely couldn’t think of anybody who would have done this too him. Or how they even gotten him here. After a little though, he decided it must have been a helicopter. They could have hovered over the rock formation and then air dropped him onto it.</p>
+<p>Well, as you can expect, the man was surprised. He had a legitimate reason to be. He hadn’t murdered a mafia member. Or ripped off any drug dealers. He genuinely couldn’t think of anybody who would have done this too him. Or how they even gotten him here. After a little thought, he decided it must have been a helicopter. They could have hovered over the rock formation and then air dropped him onto it.</p>
 
 <p>The man took a more dedicated look at what he was standing on. There wasn’t much to look at. It was about seven feet in diameter and almost completely circular. At the end of the seven feet the gaping hole began. That gaping hole completely surrounded him and he couldn’t see the bottom. That was a problem. He was essentially standing on top of a totem pole in the middle of nowhere.</p>
 
