Added careerify logo

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -113,10 +113,17 @@
 					<div class="col-md-12 text-center">
 						<div class="companies">
 							<div class="company small-margin-top">
+								<a title="Careerify" href="https://www.careerify.net">
+									<img src="/images/logos/careerify-logo.png" width="300px" alt="Careerify">
+								</a>
+							</div>
+
+							<div class="company small-margin-top">
 								<a title="Roadmunk" href="https://www.roadmunk.com">
 									<img src="/images/logos/roadmunk-logo.png" width="300px" alt="Roadmunk">
 								</a>
 							</div>
+
 							<div class="company small-margin-top">
 								<a title="Salesforce Work.com" href="http://www.work.com">
 									<img src="/images/logos/w-logo.png" width="300px" alt="Salesforce Work.com">
