--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -40,8 +40,8 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" title="Style Guide">
-							&nbsp;
+						<a href="http://stackoverflow.com/users/2896768/schybo" title="Style Guide">
+							StackOverflow
 						</a>
 					</li>
 				</ol>
