Update company headers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -113,6 +113,26 @@
 					<div class="col-md-12 text-center">
 						<div class="companies">
 							<div class="company small-margin-top">
+								<a title="Intercom" href="https://www.intercom.com/">
+									<img src="/images/logos/intercom-logo.png" width="300px" alt="Intercom">
+								</a>
+							</div>
+							<div class="company small-margin-top">
+								<a title="Pearl Morissette" href="https://pearlmorissette.com/">
+									<img src="/images/logos/pm-logo.png" width="300px" alt="Pearl Morissette">
+								</a>
+							</div>
+							<div class="company small-margin-top">
+								<a title="Zanbato" href="https://zanbato.com/">
+									<img src="/images/logos/zanbato-logo.png" width="300px" alt="Zanbato">
+								</a>
+							</div>
+							<div class="company small-margin-top">
+								<a title="Careerify" href="https://www.linkedin.com/company/careerify">
+									<img src="/images/logos/careerify-logo.png" width="300px" alt="Careerify">
+								</a>
+							</div>
+							<div class="company small-margin-top">
 								<a title="Roadmunk" href="https://www.roadmunk.com">
 									<img src="/images/logos/roadmunk-logo.png" width="300px" alt="Roadmunk">
 								</a>
@@ -122,22 +142,24 @@
 									<img src="/images/logos/w-logo.png" width="300px" alt="Salesforce Work.com">
 								</a>
 							</div>
-							
 							<div class="company small-margin-top">
 								<a title="Blueprint Coaching" href="http://www.blueprintcoaching.ca">
 									<img src="/images/logos/bc-logo.png" width="300px" alt="Blueprint Coaching">
 								</a>
 							</div>
-
 							<div class="company small-margin-top">
 								<a title="Martin Verdugos Beach Resort" href="http://www.verdugosbeachresort.com/">
 									<img src="/images/logos/mc-logo.png" width="300px" alt="Martin Verdugos Beach Resort">
 								</a>
 							</div>
-
 							<div class="company small-margin-top">
 								<a title="Bake Sale" href="http://www.bakesaletoronto.com/">
 									<img src="/images/logos/bs-logo.png" width="150px" alt="Bake Sale">
+								</a>
+							</div>
+							<div class="company small-margin-top">
+								<a title="Centerville" href="http://www.centreisland.ca/centreville.html">
+									<img src="/images/logos/centerville-logo.png" width="300px" alt="Centerville">
 								</a>
 							</div>
 						</div>
