Cleaning up site

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,8 @@
 				<div class="col-lg-6">
 					<header class="section-header home landing-text underline underline-left underline-landing">
 						<h1 class="headline text-large hairline landing-text">Brent Scheibelhut</h1>
-						<p class="get-smaller">Developer. Designer. Athlete. Writer.<br> Freelancing At Its Finest.</p>
+						<!-- <p class="get-smaller">Developer. Designer. Athlete. Writer.<br> Freelancing At Its Finest.</p> -->
+						<p class="get-smaller">Developer. Designer. Athlete. Writer.</p>
 					</header>
 					<div class="row landing-ctas">
 						<div class="col-lg-12 small-margin-bottom">
