--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,8 +61,18 @@
 						<div id="feature_2_text" class="col-md-7 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Development</h1>
-								<p class="body-subheader features">Current studying for a degree in Honours Computer Science Brent is immersed in a development environment day in an day out. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
+								<p class="body-subheader features">With a degree in Honours Computer Science, and five internships under his belt, Brent has been immersed in a development environment day in an day out for numerous years. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
 								<ul>
+									<li>
+										<a href="https://uwcourses.com/">
+											UWCourses
+										</a>via Node, Python Cronjobs
+									</li>
+									<li>
+										<a href="https://zuisalive.herokuapp.com/">
+											Zuisalive
+										</a>via D3, Semantic UI, Gulp, ES6
+									</li>
 									<li>
 										<a href="http://easybadge.herokuapp.com/">
 											EasyBadge
@@ -87,7 +97,7 @@
 						<div id="feature_3_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">SEO &#38; Marketing</h1>
-								<p class="body-subheader features">Both of Brent's co-ops, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing, from email drops to SEO. Brent can help with:</p>
+								<p class="body-subheader features">A number of Brent's interships, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing, from email drops to SEO. Brent can help with:</p>
 								<ul>
 									<li>Intelligent funnel campaigns set up from experience</li>
 									<li>Harnessing the power of social media to engage customers</li>
