Fixed spelling errors

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
 								<ul>
 									<li>Completely customized website design - special emphasis on responsive development</li>
 									<li>Custom email templates, logos, &#38; icons</li>
-									<li>Graphic designs for advertisements, &#38; interactive PDF's, and website</li>
+									<li>Graphic designs for advertisements, &#38; interactive PDF's, and websites</li>
 								</ul>
 							</header>
 						</div>
@@ -61,7 +61,7 @@
 						<div id="feature_2_text" class="col-md-7 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Development</h1>
-								<p class="body-subheader features">With a degree in Honours Computer Science, and five internships under his belt, Brent has been immersed in a development environment day in an day out for numerous years. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
+								<p class="body-subheader features">With a degree in Honours Computer Science, and five internships under his belt, Brent has been immersed in a development environment day in and day out for numerous years. Other than the work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
 								<ul>
 									<li>
 										<a href="https://uwcourses.com/">
@@ -97,7 +97,7 @@
 						<div id="feature_3_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">SEO &#38; Marketing</h1>
-								<p class="body-subheader features">A number of Brent's interships, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing, from email drops to SEO. Brent can help with:</p>
+								<p class="body-subheader features">A number of Brent's internships, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing, from email drops to SEO. Brent can help with:</p>
 								<ul>
 									<li>Intelligent funnel campaigns set up from experience</li>
 									<li>Harnessing the power of social media to engage customers</li>
